[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pylint.messages_control]
disable=["logging-fstring-interpolation"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39,py310,lint
skip_missing_interpreters = true
toxworkdir=/tmp/.pylingdocs_tox

[testenv]
usedevelop = True
commands = 
    pytest --cov
extras = dev

[testenv:lint]
commands =
    python -m prospector src
    python -m isort --check-only src
    python -m flake8 src
    python -m flake8 tests
    python -m prospector tests
extras = dev
"""
