[tool.poetry]
name = "lingdocs"
version = "0.1.4"
authors = ["Florian Matter <flmt@mailbox.org>"]
license = "Apache-2.0"
homepage = "https://fl.mt/lingdocs"
repository = "https://www.github.com/fmatter/lingdocs"
keywords = ["cldf", "markdown", "digital linguistics"]
readme = "README.md"
description = "Create data-rich linguistic documents."
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.urls]
"Bug tracker" = "https://www.github.com/fmatter/lingdocs/issues"

[tool.poetry.scripts]
lingdocs = 'lingdocs.cli:main'

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.7"
pandas = "^2.0.3"
pycldf = "^1.35.0"
python-slugify = "^8.0.1"
cldfviz = "^1.0.0"
panflute = "^2.3.0"
cookiecutter = "^2.4.0"
writio = "^0.0.1"
cldf-rel = "^0.0.4"
hupper = "^1.12"
mkdocs-site-urls = "^0.2.0"
mkdocs-material = "^9.4.3"
mkdocs-enumerate-headings-plugin = "^0.6.1"
mkdocs-awesome-pages-plugin = "^2.9.2"
importlib-resources = "^6.1.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
mkdocs-click = "^0.8.1"
mkdocstrings = "^0.23.0"
markdown-include = "^0.8.1"
pytest = "^7.4.2"
keepachangelog = "^1.0.0"
invoke = "^2.2.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
libsass = "^0.22.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "lingdocs", from = "src" },
]

[tool.pylint.messages_control]
disable=["logging-fstring-interpolation"]

[tox]
isolated_build = true
toxworkdir = "/tmp/.lingdocs_tox"
commands = "pytest tests/ --import-mode importlib"

[tool.pytest.ini_options]
testpaths = "tests"

[other]
pandas = [
    { version = "2.0.3", python = "~3.8"},
    { version = "^2.1.1", python = ">=3.9"}
]
