[metadata]
author = Florian Matter
author_email = florianmatter@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Create data-rich linguistic documents.
keywords =
    digital linguistics
    CLDF
long_description = file: README.md
long_description_content_type = text/markdown
name = pylingdocs
project_urls =
    Bug Tracker = https://github.com/fmatter/pylingdocs/issues
url = https://github.com/fmatter/pylingdocs
version = 0.0.8

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires = 
    click >= 8.1.2
    cldfviz >= 0.9.0
    pycldf >= 1.25.1
    pandas >= 1.3.5
    importlib_resources >= 5.6.0; python_version < "3.9.0"
    panflute >= 2.1.3
    hupper >= 1.10.3
    cookiecutter >= 1.7.3
    cffconvert >= 2.0.0

[options.entry_points]
console_scripts =
    pylingdocs=pylingdocs.cli:main

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]==1.7.7
    isort
    pytest
    pytest-cov
    sphinx==4.5.0
    sphinx_rtd_theme
    sphinx-autoapi
    sphinx-click==4.0.0
    tox
    myst_parser
    flake8
publishing =
    twine
    wheel

[options.packages.find]
include = pylingdocs, pylingdocs.*
where = src

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = pylingdocs
src_paths = pylingdocs,tests
line_length = 120

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    var
    clld

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source =
    pylingdocs

[coverage:report]
show_missing = true