[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pylint."MESSAGES.CONTROL"]
disable=["logging-fstring-interpolation"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39,py310,lint
skip_missing_interpreters = true
toxworkdir=/tmp/.{{ cookiecutter.clld_slug }}_tox

[testenv]
usedevelop = True
commands = 
    pytest --cov
extras = dev

[testenv:lint]
commands =
    python -m flake8
    prospector
    isort --check-only src/{{ cookiecutter.clld_slug }} --diff
extras = dev
"""
