[metadata]
author = {{ cookiecutter.developer }}
author_email = {{ cookiecutter.developer_email }}
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    {{ {"Apache Software License 2.0": "License :: OSI Approved :: Apache Software License",
        "MIT license": "License :: OSI Approved :: MIT License",
        "BSD license": "License :: OSI Approved :: BSD License",
        "ISC license": "License :: OSI Approved :: ISC License (ISCL)",
        "GNU General Public License v3 or later": "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Not open source": "License :: Other/Proprietary License"
    }[cookiecutter.license] }}
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = {{ cookiecutter.description }}
keywords =
    {{ cookiecutter.keyword1 }}
    {{ cookiecutter.keyword2 }}
    pylingdocs
long_description = file: README.md
long_description_content_type = text/markdown
name = {{ cookiecutter.clld_slug }}
project_urls =
    Bug Tracker = {{ cookiecutter.repository }}/issues
url = {{ cookiecutter.repository }}
version = {{ cookiecutter.version }}

[options]
zip_safe = False
include_package_data = True
packages = {{ cookiecutter.clld_slug }}
install_requires = 
    clld >= 7.0

[options.extras_require]
dev =
    pytest

publishing =
    twine
    wheel

[options.packages.find]
include = {{ cookiecutter.clld_slug }}, {{ cookiecutter.clld_slug }}.*

[options.entry_points]
paste.app_factory = main = {{cookiecutter.clld_slug}}:main

[compile_catalog]
directory = {{cookiecutter.clld_slug}}/locale
domain = clld
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = {{cookiecutter.clld_slug}}/locale/{{cookiecutter.clld_slug}}.pot
width = 80

[init_catalog]
domain = clld
input_file = {{cookiecutter.clld_slug}}/locale/{{cookiecutter.clld_slug}}.pot
output_dir = {{cookiecutter.clld_slug}}/locale

[update_catalog]
domain = clld
input_file = {{cookiecutter.clld_slug}}/locale/{{cookiecutter.clld_slug}}.pot
output_dir = {{cookiecutter.clld_slug}}/locale
previous = true
